lib/jazz.sample/src/jazz/sample/error/module/extraneous.jazz
;;;==============
;;;  JazzScheme
;;;==============
;;;
;;;; Extraneous
;;;


(library jazz.sample.error.module.extraneous)


(foo)
